# smaregi-price-converter-api

./: README.md  cheatsheet.md  config.py  pyproject.toml  requirements.txt
data/: new_price_data.csv  old_price_data.csv  testdata.csv
mock/: sample.py
python/: main.py  multifile.py  singlefile.py
smaregi-price-converter/: main.py  pyproject.toml
smaregi-price-converter/data/: new_price_data.csv
smaregi_priceconverter/: app.py
tests/: beta.py  main.py
tests/data/: testdata.csv
uploads/: test.csv
